k8s/activity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activity-service
spec:
  selector:
    app: activity-service
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      name: activity-service
      labels:
        app: activity-service
    spec:
      containers:
        - name: activity-service
          image: acrprodnortheurope001.azurecr.io/activity-service:3859c5d
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ccloudconfig
              mountPath: /etc/ccloud-config
          resources: {}
      volumes:
        - name: ccloudconfig
          secret:
            secretName: ccloud-config
            items:
              - key: librdkafkaconfig
                path: ./librdkafka.config
              - key: schemaregistryconfig
                path: ./schema-registry.config
