k8s/organization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organization-service
spec:
  selector:
    app: organization-service
  ports:
    - port: 80
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization-service
  template:
    metadata:
      name: organization-service
      labels:
        app: organization-service
    spec:
      containers:
        - name: organization-service
          image: acrprodnortheurope001.azurecr.io/organization-service:3859c5d
          ports:
            - containerPort: 5001
          resources: {}
